fix get stoned button on narrow

--- a/src/css/stonedaudio.styl
+++ b/src/css/stonedaudio.styl
@@ -189,7 +189,8 @@ section
       top: 60vh
 
     .watch
-      padding-left: 60px
+      // padding-left: 60px
+      padding-left: 20px
       padding-right: 20px
 
       .play
